--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="index.css">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CSS Intro</title>
@@ -10,14 +11,14 @@
     <header>
       <nav>
         <ul>
-          <li>
-            <a href="/">Home</a>
+          <li class="d-inline">
+            <a class="nav-link" href="/">Home</a>
           </li>
-          <li>
-            <a href="/about">About</a>
+          <li class="d-inline">
+            <a class="nav-link" href="/about">About</a>
           </li>
-          <li>
-            <a href="/projects">Projects</a>
+          <li class="d-inline">
+            <a class="nav-link" href="/projects">Projects</a>
           </li>
         </ul>
       </nav>
@@ -25,9 +26,10 @@
 
     <main>
       <section>
-        <h1>Main Heading</h1>
-        <img src="./images/example.png" alt="Author Headshot" />
-        <p>Author.. Bio...</p>
+        <div id="avatar" title="Author Headshot"></div>
+        <p class="text-center">Author.. Bio...</p>
+
+        <h1 id="title">Main Heading</h1>
       </section>
       <article>
         <section>
@@ -49,10 +51,10 @@
       <nav>
         <ul>
           <li>
-            <a href="/privacy">Privacy Policy</a>
+            <a class="nav-link" href="/privacy">Privacy Policy</a>
           </li>
           <li>
-            <a href="/terms">Terms and Conditions</a>
+            <a class="nav-link" href="/terms">Terms and Conditions</a>
           </li>
         </ul>
       </nav>
